# dicetray

./: Makefile  README.rst  pyproject.toml
.github/workflows/: publish.yml  tests.yml
dicetray/: __init__.py  lexer.py  parser.py
tests/unit/: test_dice.py  test_dicetray.py
