[tool.poetry]
name = "dicetray"
version = "0.1.1"
description = "Tabletop RPG Dice roller"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
sly = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = "^5.3"
black = "^20.8b1"

[tool.coverage.run]
branch = true
source = [
    "dicetray/"
]
omit = [
    ".tox/",
    "tests/*",
]

[tool.coverage.report]
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
