[tool.poetry]
name = "dicetray"
version = "1.1.3"
description = "Tabletop RPG Dice roller"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
repository = "https://github.com/gtmanfred/dicetray.git"
homepage = "https://github.com/gtmanfred/dicetray.git"
license = "Apache-2.0"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6"
sly = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = "^5.3"
black = "^20.8b1"

[tool.coverage.run]
branch = true
source = [
    "dicetray/"
]
omit = [
    ".tox/",
    "tests/*",
]

[tool.coverage.report]
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
